--- a/myfirstchall/templates/index.html
+++ b/myfirstchall/templates/index.html
@@ -4,6 +4,7 @@
     <head>
         <!--Font css-->
         <link rel="stylesheet" href="../static/styles.css">
+        <link rel="icon" type="image/x-icon" href="../static/favicon.ico">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My First Website</title>
